--- a/single.html
+++ b/single.html
@@ -189,8 +189,15 @@
 
         // 1) 제목 & 날짜 & 요약기사 렌더링
         titleEl.textContent = issue.issue_name;
+
+        // ▶ UTC → KST(+9h), 10분 단위 분 내림, "X시 Y분 경" 적용
         dateElem.setAttribute('datetime', issue.date);
-        dateElem.textContent = new Date(issue.date).toLocaleString();
+        const d0 = new Date(issue.date);
+        d0.setHours(d0.getHours() + 9);
+        const h0 = d0.getHours();
+        const m0 = Math.floor(d0.getMinutes() / 10) * 10;
+        dateElem.textContent = `${h0}시 ${m0}분 경`;
+
         contentEl.textContent = issue.summary;
 
         // 2) 연관기사 fetch & 렌더
