--- a/login.html
+++ b/login.html
@@ -1,12 +1,10 @@
 <!DOCTYPE HTML>
 <!--
   Future Imperfect – Log In
-  html5up.net  | @ajlkn
-  Free for personal and commercial use under the CCA 3.0 license
 -->
 <html>
 <head>
-  <title>Future Imperfect – Log In</title>
+  <title>로그인</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +16,7 @@
 
     <!-- Header -->
     <header id="header">
-      <h1><a href="index.html">Future Imperfect</a></h1>
+      <h1><a href="index.html">준혁이는 뉴스 보기 귀찮아!</a></h1>
       <nav class="links">
         <ul>
           <li><a href="#">Lorem</a></li>
@@ -30,29 +28,16 @@
       </nav>
       <nav class="main">
         <ul>
-          <li class="menu">
-            <a class="fa-bars" href="#menu">Menu</a>
-          </li>
+          <li class="menu"><a class="fa-bars" href="#menu">Menu</a></li>
         </ul>
       </nav>
     </header>
 
-    <!-- Menu (로그인/회원가입 링크만) -->
+    <!-- Menu -->
     <section id="menu">
       <section>
-        <ul class="links">
-          <li>
-            <a href="login.html">
-              <h3>Log In</h3>
-              <p>로그인 하기</p>
-            </a>
-          </li>
-          <li>
-            <a href="signup.html">
-              <h3>Sign Up</h3>
-              <p>회원가입 하기</p>
-            </a>
-          </li>
+        <ul class="links" id="menuLinks">
+          <!-- 로그인 상태에 따라 JS로 채워짐 -->
         </ul>
       </section>
     </section>
@@ -79,6 +64,44 @@
 
   </div>
 
+  <!-- 로그인 상태에 따라 메뉴 업데이트 -->
+  <script>
+  document.addEventListener('DOMContentLoaded', async () => {
+    const API_BASE = 'https://news-assistant-app-public-1052035590147.us-central1.run.app';
+    const links    = document.getElementById('menuLinks');
+
+    try {
+      const profileRes = await fetch(`${API_BASE}/profile`, { credentials: 'include' });
+      links.innerHTML = '';
+
+      if (profileRes.ok) {
+        const { username } = await profileRes.json();
+
+        links.innerHTML = `
+          <li class="greeting">안녕하세요. ${username}님</li>
+          <li><a href="editinfo.html"><h3>카테고리 수정</h3><p>내 뉴스 카테고리</p></a></li>
+          <li><a href="#" id="logoutLink"><h3>Logout</h3><p>로그아웃</p></a></li>
+          <li><a href="editorpage.html"><h3>Developer Page</h3><p>개발자 페이지</p></a></li>
+        `;
+
+        document.getElementById('logoutLink').addEventListener('click', async e => {
+          e.preventDefault();
+          await fetch(`${API_BASE}/logout`, { method: 'POST', credentials: 'include' });
+          window.location.reload();
+        });
+      } else {
+        links.innerHTML = `
+          <li><a href="login.html"><h3>Log In</h3><p>로그인 하기</p></a></li>
+          <li><a href="signup.html"><h3>Sign Up</h3><p>회원가입 하기</p></a></li>
+          <li><a href="editorpage.html"><h3>Developer Page</h3><p>개발자 페이지</p></a></li>
+        `;
+      }
+    } catch (e) {
+      console.error('로그인 상태 확인 중 에러:', e);
+    }
+  });
+  </script>
+
   <!-- 로그인 처리 스크립트 -->
   <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -98,19 +121,14 @@
             body: JSON.stringify({ username, password })
           });
 
-          // 로그인 성공 여부 확인
           if (!res.ok) {
             const data = await res.json();
             alert('로그인 실패: ' + (data.error || res.statusText));
             return;
           }
 
-          // 사용자 ID만 로컬스토리지에 저장 (쿠키로 인증 유지)
           localStorage.setItem('user_id', username);
-
-          // 로그인 후 인덱스 페이지로 이동
           window.location.href = 'index.html';
-
         } catch (err) {
           console.error(err);
           alert('네트워크 오류가 발생했습니다.');
