사소한 오류

--- a/editorpage.html
+++ b/editorpage.html
@@ -80,6 +80,15 @@
             <p>Front-end 개발 담당</p>
           </div>
         </li>
+        <li class="dev-item">
+          <div class="image">
+            <img src="images/dev1.jpg" alt="Developer 1" />
+          </div>
+          <div class="details">
+            <h3>홍길동</h3>
+            <p>Front-end 개발 담당</p>
+          </div>
+        </li>
         <!-- 추가 개발자 항목… -->
       </ul>
     </section>
