--- a/single.html
+++ b/single.html
@@ -115,7 +115,7 @@
         document.getElementById('logoutLink').addEventListener('click', async e => {
           e.preventDefault();
           await fetch(`${API_BASE}/logout`, { method: 'POST', credentials: 'include' });
-          window.location.reload();
+          window.location.href = 'index.html';
         });
       } else {
         links.innerHTML = `
