--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <li class="menu"><a class="fa-bars" href="#menu">Menu</a></li>
         </ul>
       </nav>
-    </header> <!-- :contentReference[oaicite:0]{index=0} -->
+    </header>
 
     <!-- Menu (editorpage.html에서 복사) -->
     <section id="menu">
@@ -36,7 +36,7 @@
           <!-- 로그인 상태에 따라 JS로 채워짐 -->
         </ul>
       </section>
-    </section> <!-- :contentReference[oaicite:1]{index=1} -->
+    </section>
 
     <!-- Sidebar Intro (원본 index.html) -->
     <section id="sidebar">
@@ -47,17 +47,14 @@
           <p>인공지능 프로젝트</p>
         </header>
       </section>
-
-      <!-- Optional additional sidebar sections… -->
-
-    </section> <!-- :contentReference[oaicite:2]{index=2} -->
+    </section>
 
     <!-- Posts List (원본 index.html) -->
     <section>
       <ul class="posts" id="postsList">
         <!-- JS로 채워집니다 -->
       </ul>
-    </section> <!-- :contentReference[oaicite:3]{index=3} -->
+    </section>
 
     <!-- About (원본 index.html) -->
     <section class="blurb">
@@ -66,7 +63,7 @@
       <ul class="actions">
         <li><a href="#" class="button">Learn More</a></li>
       </ul>
-    </section> <!-- :contentReference[oaicite:4]{index=4} -->
+    </section>
 
     <!-- Footer (원본 index.html) -->
     <section id="footer">
@@ -78,7 +75,7 @@
         <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
       </ul>
       <p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</p>
-    </section> <!-- :contentReference[oaicite:5]{index=5} -->
+    </section>
 
   </div>
 
@@ -87,7 +84,7 @@
   <script src="assets/js/browser.min.js"></script>
   <script src="assets/js/breakpoints.min.js"></script>
   <script src="assets/js/util.js"></script>
-  <script src="assets/js/main.js"></script> <!-- :contentReference[oaicite:6]{index=6} -->
+  <script src="assets/js/main.js"></script>
 
   <!-- 로그인 상태에 따라 메뉴 업데이트 (수정판) -->
   <script>
@@ -96,7 +93,6 @@
       const links     = document.getElementById('menuLinks');
       const postsList = document.getElementById('postsList');
 
-      // 1) 로그인 상태 확인 & 메뉴 렌더링
       try {
         const profileRes = await fetch(`${API_BASE}/profile`, {
           credentials: 'include'
@@ -118,6 +114,7 @@
             window.location.reload();
           });
         } else {
+          alert('현재 로그아웃 상태입니다!');
           links.innerHTML = `
             <li><a href="login.html"><h3>Log In</h3><p>로그인 하기</p></a></li>
             <li><a href="signup.html"><h3>Sign Up</h3><p>회원가입 하기</p></a></li>
@@ -156,7 +153,6 @@
             return;
           }
           issues.forEach(issue => {
-            // 중복 검사
             if (postsList.querySelector(`li[data-issue-id="${issue.id}"]`)) return;
 
             const li = document.createElement('li');
@@ -180,7 +176,7 @@
               </article>
             `;
             postsList.appendChild(li);
-            // ▶ 시간 표시 : UTC → KST(+9h), 10분 단위 내림, "Y년 M월 D일 X시 Y분 경"
+
             const timeEl = li.querySelector('time.published');
             const d = new Date(issue.date);
             d.setHours(d.getHours() + 9);
@@ -191,10 +187,7 @@
             const m = Math.floor(d.getMinutes() / 10) * 10;
             timeEl.textContent = `${year}년 ${month}월 ${day}일 ${h}시 ${m}분 경`;
 
-
-            // 이미지 로테이션
-            const images = (issue.related_news || [])
-              .map(n => n.image_url).filter(u => u);
+            const images = (issue.related_news || []).map(n => n.image_url).filter(u => u);
             if (images.length) {
               let idx = 0;
               const imgEl = li.querySelector('img.rotator');
@@ -206,17 +199,12 @@
               }, 5000);
             }
 
-            // 클릭 이벤트 전달. 절-대 지우지 말기
             li.querySelectorAll(`.issue-${issue.id}`).forEach(x => {
-              x.addEventListener('click', async e => {
+              x.addEventListener('click', async () => {
                 const resp = await fetch(`${API_BASE}/click-event`, {
                   method: 'POST',
-                  headers: {
-                      'Content-Type': 'application/json'
-                  },
-                  body: JSON.stringify({
-                    "issue_id" : issue.id
-                  }),
+                  headers: { 'Content-Type': 'application/json' },
+                  body: JSON.stringify({ issue_id: issue.id }),
                   credentials: 'include'
                 });
                 if (!resp.ok) throw new Error(resp.statusText);
@@ -231,17 +219,14 @@
         }
       }
 
-      // 초기 로드
       loadIssues();
-
-      // 무한 스크롤
       window.addEventListener('scroll', () => {
         if (window.innerHeight + window.scrollY >= document.body.offsetHeight - 200) {
           loadIssues();
         }
       });
     });
-  </script> <!-- :contentReference[oaicite:8]{index=8} -->
+  </script>
 
 </body>
 </html>
