--- a/index.html
+++ b/index.html
@@ -58,25 +58,9 @@
 
     <!-- About (원본 index.html) -->
     <section class="blurb">
-      <h2>About</h2>
-      <p>사실 이 프로젝트 제목은 준혁이의 허락을 받지 않고 어쩌고 저쩌고~</p>
-      <ul class="actions">
-        <li><a href="#" class="button">Learn More</a></li>
-      </ul>
+      <h2>EsterEgg</h2>
+      <p>여기까지 스크롤을 해주시다니! 감사합니다!</p>
     </section>
-
-    <!-- Footer (원본 index.html) -->
-    <section id="footer">
-      <ul class="icons">
-        <li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-        <li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-        <li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-        <li><a href="#" class="icon solid fa-rss"><span class="label">RSS</span></a></li>
-        <li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-      </ul>
-      <p class="copyright">&copy; Untitled. Design: <a href="http://html5up.net">HTML5 UP</a>.</p>
-    </section>
-
   </div>
 
   <!-- 필수 스크립트 (원본 index.html) -->
