준혁이는 뉴스 보기가 귀찮아!

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-  <title>준혁이는 뉴스 보기 귀찮아!</title>
+  <title>준혁이는 뉴스 보기가 귀찮아!</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -34,7 +34,7 @@
       <section id="intro">
         <a href="#" class="logo"><img src="images/로고1.png" alt="" /></a>
         <header>
-          <h2>준혁이는 뉴스 보기 귀찮아!</h2>
+          <h2>준혁이는 뉴스 보기가 귀찮아!</h2>
           <p>인공지능 프로젝트</p>
         </header>
       </section>
