--- a/editinfo.html
+++ b/editinfo.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header id="header">
-      <h1><a href="index.html">준혁이는 뉴스 보기 귀찮아!</a></h1>
+      <h1><a href="index.html">준혁이는 뉴스 보기가 귀찮아!</a></h1>
       <nav class="links">
         <ul id="menuLinksHeader">
           <!-- 로그인 상태에 따라 JS로 채웁니다 -->
