--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header id="header">
-      <h1><a href="index.html">준혁이는 뉴스 보기 귀찮아!</a></h1>
+      <h1><a href="index.html">준혁이는 뉴스 보기가 귀찮아!</a></h1>
       <nav class="links">
         <ul>
           <li><a href="#">Lorem</a></li>
