--- a/editorpage.html
+++ b/editorpage.html
@@ -48,15 +48,6 @@
     <!-- Header (index.html과 동일) -->
     <header id="header">
       <h1><a href="index.html">준혁이는 뉴스 보기가 귀찮아!</a></h1>
-      <nav class="links">
-        <ul>
-          <li><a href="#">Lorem</a></li>
-          <li><a href="#">Ipsum</a></li>
-          <li><a href="#">Feugiat</a></li>
-          <li><a href="#">Tempus</a></li>
-          <li><a href="#">Adipiscing</a></li>
-        </ul>
-      </nav>
       <nav class="main">
         <ul>
           <li class="menu"><a class="fa-bars" href="#menu">Menu</a></li>
@@ -81,17 +72,17 @@
             <img src="images/dev1.jpg" alt="Developer 1" />
           </div>
           <div class="details">
-            <h3>박범진</h3>
-            <p>Front-end 개발 담당</p>
+            <h3>박범진: Back-end 개발 담당</h3>
+            <p>끄적끄적</p>
           </div>
         </li>
         <li class="dev-item">
           <div class="image">
-            <img src="images/dev1.jpg" alt="Developer 2" />
+            <img src="images/ChoiYunho.jpg" alt="Developer 2" />
           </div>
           <div class="details">
-            <h3>최윤호</h3>
-            <p>Back-end 개발 담당</p>
+            <h3>최윤호: Front-end 개발 담당</h3>
+            <p>너무 힘들었어요 ㅠㅠ 근데 나보다 범진이가 더 힘들었어요...</p>
           </div>
         </li>
         <!-- 추가 개발자 항목… -->
