--- a/single.html
+++ b/single.html
@@ -12,16 +12,8 @@
 
     <!-- Header (editorpage.html에서 복사) -->
     <header id="header">
-      <h1><a href="index.html">준혁이는 뉴스 보기가 귀찮아!</a></h1>
-      <nav class="links">
-        <ul>
-          <li><a href="#">Lorem</a></li>
-          <li><a href="#">Ipsum</a></li>
-          <li><a href="#">Feugiat</a></li>
-          <li><a href="#">Tempus</a></li>
-          <li><a href="#">Adipiscing</a></li>
-        </ul>
-      </nav>
+      <h1><a href="index.html">준혁이는 뉴스 보기가 귀찮아!
+      </a></h1>
       <nav class="main">
         <ul>
           <li class="menu"><a class="fa-bars" href="#menu">Menu</a></li>
