뒤로가기수정2

--- a/single.html
+++ b/single.html
@@ -49,7 +49,11 @@
 
       <footer>
         <ul class="actions">
-          <a href="#" class="button large" onclick="history.back(); return false;">뒤로 가기</a>
+          <li>
+            <a href="#" class="button large" onclick="history.back(); return false;">
+              뒤로 가기
+            </a>
+          </li>
         </ul>
       </footer>
     </article>
